--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="icon" href="./images/favicon.ico" sizes="any" />
-    <link rel="icon" href="./svg/favicon.svg" type="svg" />
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
   </head>
   <body class="page">
     <header class="header">
-      <h1 class="header__title">&lt/HTML&gt</h1>
+      <h1 class="header__title">"&lt"/HTML"&gt"</h1>
       <h2 class="header__text">закрывающий тег</h2>
     </header>
     <main class="main">
@@ -23,7 +23,7 @@
         <h3 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">&lt/HTML&gt</span>
+          <span class="image-label">"&lt"/HTML"&gt"</span>
         </div>
         <article class="card__text">
           <p>Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
@@ -51,7 +51,7 @@
         <h3 class="card__title">1 спринт: Я — чистый лист</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">&lt/HTML&gt</span>
+          <span class="image-label">"&lt"/HTML"&gt"</span>
         </div>
         <article class="card__text">
           <p>На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?</p>
@@ -79,7 +79,7 @@
         <h3 class="card__title">1 спринт: А если не получится?</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">&ltCSS&gt</span>
+          <span class="image-label">"&lt"CSS"&gt"</span>
         </div>
         <article class="card__text">
           <p>Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.</p>
@@ -107,7 +107,7 @@
         <h3 class="card__title">2 спринт: Погоня за идеалом</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">&ltdesigions&gt</span>
+          <span class="image-label">"&lt"desigions"&gt"</span>
         </div>
         <article class="card__text">
           <p>На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.</p>
@@ -163,7 +163,7 @@
         <h3 class="card__title">3 спринт: Обходные стратегии</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">&ltsupport&gt</span>
+          <span class="image-label">"&lt"support"&gt"</span>
         </div>
         <article class="card__text">
           <p>На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.</p>
@@ -191,7 +191,7 @@
         <h3 class="card__title">3 спринт: Когда опускаются руки</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">&ltlifes-style: none;&gt</span>
+          <span class="image-label">"&lt"lifes-style: none;"&gt"</span>
         </div>
         <article class="card__text">
           <p>Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.</p>
@@ -219,7 +219,7 @@
         <h3 class="card__title">«Сейчас я здесь»</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">&ltexperience&gt</span>
+          <span class="image-label">"&lt"experience"&gt"</span>
         </div>
         <article class="card__text">
           <p>Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.</p>
