--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <h1 class="header__title">"&lt"/HTML"&gt"</h1>
+      <h1 class="header__title">&lt/HTML&gt</h1>
       <h2 class="header__text">закрывающий тег</h2>
     </header>
     <main class="main">
@@ -23,7 +23,7 @@
         <h3 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">"&lt"/HTML"&gt"</span>
+          <span class="image-label">&lt/HTML&gt</span>
         </div>
         <article class="card__text">
           <p>Это было самое начало пути. На этом этапе важно было проникнуться основами и настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
@@ -51,11 +51,11 @@
         <h3 class="card__title">1 спринт: Я — чистый лист</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">"&lt"/HTML"&gt"</span>
+          <span class="image-label">&lt/HTML&gt</span>
         </div>
         <article class="card__text">
           <p>На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я не справлюсь?</p>
-          <p>Место для ваших воспоминаний о начале первого спринта.</p>
+          <p>Спринт начался легко. У меня не возникало сложностей с пониманием материала.</p>
         </article>
         <div class="button-bar">
           <button class="card__icon-button" name="icon-button">
@@ -79,11 +79,11 @@
         <h3 class="card__title">1 спринт: А если не получится?</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">"&lt"CSS"&gt"</span>
+          <span class="image-label">&ltCSS&gt</span>
         </div>
         <article class="card__text">
           <p>Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить в себя.</p>
-          <p>Место для ваших воспоминаний об окончании первого спринта.</p>
+          <p>Делать проектную работу оказалось очень интересно.</p>
         </article>
         <div class="button-bar">
           <button class="card__icon-button" name="icon-button">
@@ -107,7 +107,7 @@
         <h3 class="card__title">2 спринт: Погоня за идеалом</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">"&lt"desigions"&gt"</span>
+          <span class="image-label">&ltdesigions&gt</span>
         </div>
         <article class="card__text">
           <p>На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.</p>
@@ -139,7 +139,7 @@
         </div>
         <article class="card__text">
           <p>Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?</p>
-          <p>Место для ваших воспоминаний об окончании второго спринта.</p>
+          <p>Второй спринт прошел отлично. Узнал много нового и интересного. </p>
         </article>
         <div class="button-bar">
           <button class="card__icon-button" name="icon-button">
@@ -163,11 +163,11 @@
         <h3 class="card__title">3 спринт: Обходные стратегии</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">"&lt"support"&gt"</span>
+          <span class="image-label">&ltsupport&gt</span>
         </div>
         <article class="card__text">
           <p>На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.</p>
-          <p>Место для ваших воспоминаний о начале третьего спринта.</p>
+          <p>Третий спринт начинался как обычно.</p>
         </article>
         <div class="button-bar">
           <button class="card__icon-button" name="icon-button">
@@ -191,11 +191,11 @@
         <h3 class="card__title">3 спринт: Когда опускаются руки</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">"&lt"lifes-style: none;"&gt"</span>
+          <span class="image-label">&ltlifes-style: none;&gt</span>
         </div>
         <article class="card__text">
           <p>Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.</p>
-          <p>Место для ваших воспоминаний об окончании третьего спринта.</p>
+          <p>Окончание 3 спринта мне далось с трудом. Окончание года, завал на работе. Пришлось сменить кагорту.</p>
         </article>
         <div class="button-bar">
           <button class="card__icon-button" name="icon-button">
@@ -219,11 +219,11 @@
         <h3 class="card__title">«Сейчас я здесь»</h3>
         <div class="card__image">
           <img class="image" src="./images/image.png" alt="Фургон в пиксельном стиле">
-          <span class="image-label">"&lt"experience"&gt"</span>
+          <span class="image-label">&ltexperience&gt</span>
         </div>
         <article class="card__text">
           <p>Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания. Ведь часто путь — и есть результат.</p>
-          <p>Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.</p>
+          <p>Заниматься разметкой интересно, но хочется поскорее перейти к js</p>
         </article>
         <div class="button-bar">
           <button class="card__icon-button" name="icon-button">
