Исправления после 2 ревью

--- a/index.html
+++ b/index.html
@@ -261,12 +261,12 @@
     </main>
     <script src="./scripts/like.js"></script>
     <dialog id="dialog-id" class="dialog">
-      <span class="dialog__text">
+      <div class="dialog__text">
         <svg class="floppy" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
           <use href="./svg/floppy.svg#floppy" />
         </svg> 
         <p>Вставьте дискету, чтобы продолжить</p>
-      </span>
+      </div>
       <button 
         class="dialog__button button" 
         name="confirm-button" 
